--- a/templates/etc/logrotate.d/rule.erb
+++ b/templates/etc/logrotate.d/rule.erb
@@ -1,14 +1,14 @@
 <%
   opts = []
 
-  if path.kind_of?(Array)
-    rpath = path.join(' ')
+  if @path.kind_of?(Array)
+    rpath = @path.join(' ')
   else
-    rpath = path
+    rpath = @path
   end
 
   if has_variable?('_create')
-    if _create == 'create'
+    if @_create == 'create'
       opts << [_create, create_mode, create_owner, create_group].reject { |r|
         r == 'undef'
       }.join(' ')
@@ -38,24 +38,24 @@
 <% opts.each do |opt| -%>
   <%= opt %>
 <% end -%>
-<% if postrotate != 'undef' -%>
+<% if @postrotate != 'undef' -%>
   postrotate
-    <%= postrotate %>
+    <%= @postrotate %>
   endscript
 <% end -%>
-<% if prerotate != 'undef' -%>
+<% if @prerotate != 'undef' -%>
   prerotate
-    <%= prerotate %>
+    <%= @prerotate %>
   endscript
 <% end -%>
-<% if firstaction != 'undef' -%>
+<% if @firstaction != 'undef' -%>
   firstaction
-    <%= firstaction %>
+    <%= @firstaction %>
   endscript
 <% end -%>
-<% if lastaction != 'undef' -%>
+<% if @lastaction != 'undef' -%>
   lastaction
-    <%= lastaction %>
+    <%= @lastaction %>
   endscript
 <% end -%>
 }
